--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://teliwal.github.io/mySite/"
+baseURL = "https://teliwal.github.io/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "kale"
